--- a/markup/index.html
+++ b/markup/index.html
@@ -245,7 +245,7 @@
 				<h6 class="wow rotateInDownRight" data-wow-duration="2s">Proin iaculis purus consequat sem cure.</h6>
 				<form class="form" action="#">
 					<div class="clearefix">
-						<dvi class="form-inline wow fadeInUp" data-wow-duration="2s">
+						<div class="form-inline wow fadeInUp" data-wow-duration="2s">
 							<div class="form-group">
 								<label class="sr-only" for="name">your Name</label>
 								<input type="text" class="wow flipInY" id="name" placeholder="YOUR NAME *" data-wow-delay="0.4s">
@@ -258,7 +258,7 @@
 								<label class="sr-only" for="subject">subject</label>
 								<input type="text" class="wow flipInY" id="subject" placeholder="SUBJECT"  data-wow-delay="0.8s">
 							</div>
-						</dvi>
+						</div>
 						<textarea rows="12" placeholder="YOUR MESSAGE *"  class="wow fadeInRight" data-wow-duration="2s"></textarea>
 					</div>
 					<button type="submit" class="btn wow rotateInUpRight" data-wow-duration="1.5s">Send Message</button>
